Removed meta attribute mapings for AvroSchema
