# api_docs/swagger.json
@@ -2169,147 +2169,6 @@
                 ]
             }
         },
-        "/v1/schemas/{schema_id}/meta_attr_mappings": {
-            "delete": {
-                "consumes": [
-                    "application/json"
-                ],
-                "description": "The schema_id of both the AvroSchema and Meta attribute should exist.",
-                "operationId": "delete_schema_meta_attribute_mapping",
-                "parameters": [
-                    {
-                        "description": "ID of AvroSchema for which meta attribute mappings will be deleted",
-                        "in": "path",
-                        "name": "schema_id",
-                        "required": true,
-                        "type": "integer"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/RegisterMetaAttributeRequest"
-                        }
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "No response was specified",
-                        "schema": {
-                            "$ref": "#/definitions/MetaAttributeMapping"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request"
-                    },
-                    "404": {
-                        "description": "Entity not found"
-                    },
-                    "500": {
-                        "description": "Server side error"
-                    }
-                },
-                "summary": "Remove the specified meta attribute schema_id mapping from the specified schema_id.",
-                "tags": [
-                    "schemas"
-                ]
-            },
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "description": "The schema_id of AvroSchema should exist.",
-                "operationId": "get_schema_meta_attribute_mappings",
-                "parameters": [
-                    {
-                        "description": "ID of AvroSchema for which meta attributes will be fetched",
-                        "in": "path",
-                        "name": "schema_id",
-                        "required": true,
-                        "type": "integer"
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "No response was specified",
-                        "schema": {
-                            "items": {
-                                "$ref": "#/definitions/MetaAttributeMapping"
-                            },
-                            "type": "array"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid AvroSchema ID supplied"
-                    },
-                    "404": {
-                        "description": "AvroSchema not found"
-                    },
-                    "500": {
-                        "description": "Server side error"
-                    }
-                },
-                "summary": "Get a list of all meta attribute schema_ids mapped to specified schema_id.",
-                "tags": [
-                    "schemas"
-                ]
-            },
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "description": "The schema_id of both the AvroSchema and Meta attribute should exist.",
-                "operationId": "register_schema_meta_attribute_mapping",
-                "parameters": [
-                    {
-                        "description": "ID of AvroSchema for which meta attribute mappings will be registered",
-                        "in": "path",
-                        "name": "schema_id",
-                        "required": true,
-                        "type": "integer"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/RegisterMetaAttributeRequest"
-                        }
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "No response was specified",
-                        "schema": {
-                            "$ref": "#/definitions/MetaAttributeMapping"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request"
-                    },
-                    "404": {
-                        "description": "Entity not found"
-                    },
-                    "500": {
-                        "description": "Server side error"
-                    }
-                },
-                "summary": "Register the specified meta attribute schema_id to the specified schema_id.",
-                "tags": [
-                    "schemas"
-                ]
-            }
-        },
         "/v1/schemas/{schema_id}/meta_attributes": {
             "get": {
                 "consumes": [
